[package]
name = "vstp-labs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5"
byteorder = "1.5"
thiserror = "1.0"
bitflags = "2.4"
crc-any = "2.4"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
tracing = "0.1"
futures = "0.3"
tracing-subscriber = "0.3"

[dev-dependencies]
rand = "0.8"
